(fix) make remaining sections of paper compile again with new setup for free

--- a/writeup/jfp/tex/unicode.tex
+++ b/writeup/jfp/tex/unicode.tex
@@ -139,6 +139,7 @@
 \newunicodechar{ˡ}{$^{l}$}
 \newunicodechar{ʳ}{$^r$}
 \newunicodechar{ᴰ}{$^D$}
+\newunicodechar{ᵀ}{$^T$}
 \newunicodechar{ᵇ}{$^{b}$}
 \newunicodechar{ᵐ}{$_m$}
 \newunicodechar{ⁿ}{$_n$}
