(fix) make paper compile again

--- a/writeup/jfp/tex/unicode.tex
+++ b/writeup/jfp/tex/unicode.tex
@@ -84,6 +84,9 @@
 \newunicodechar{∎}{\ensuremath{\qed}}
 \newunicodechar{↣}{\ensuremath{\rightarrowtail}}
 \newunicodechar{⟶}{\ensuremath{\longrightarrow}}
+\newunicodechar{≲}{\ensuremath{\lesssim}}
+\newunicodechar{ℓ}{\ensuremath{\ell}}
+\newunicodechar{≈}{\ensuremath{\approx}}
 
 %%
 %% Greek
