(wip) put in defs for first order stuff in S4

--- a/writeup/jfp/tex/unicode.tex
+++ b/writeup/jfp/tex/unicode.tex
@@ -81,7 +81,7 @@
 \newunicodechar{𝓒}{\ensuremath{\mathbf{\mathscr{C}}}}
 \newunicodechar{𝓓}{\ensuremath{\mathbf{\mathscr{D}}}}
 \newunicodechar{♯}{\ensuremath{\sharp}}
-\newunicodechar{∎}{\ensuremath{\qed}}
+\newunicodechar{∎}{\ensuremath{\blacksquare}}
 \newunicodechar{↣}{\ensuremath{\rightarrowtail}}
 \newunicodechar{⟶}{\ensuremath{\longrightarrow}}
 \newunicodechar{≲}{\ensuremath{\lesssim}}
