--- a/writeup/jfp/tex/references.bib
+++ b/writeup/jfp/tex/references.bib
@@ -3440,3 +3440,37 @@ japanese     =   {http://proofcafe.org/sf}
   biburl    = {https://dblp.org/rec/conf/ppdp/2014.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{DBLP:journals/tcs/HylandPP06,
+  author       = {Martin Hyland and
+                  Gordon D. Plotkin and
+                  John Power},
+  title        = {Combining effects: Sum and tensor},
+  journal      = {Theor. Comput. Sci.},
+  volume       = {357},
+  number       = {1-3},
+  pages        = {70--99},
+  year         = {2006},
+  url          = {https://doi.org/10.1016/j.tcs.2006.03.013},
+  doi          = {10.1016/J.TCS.2006.03.013},
+  timestamp    = {Wed, 17 Feb 2021 22:00:39 +0100},
+  biburl       = {https://dblp.org/rec/journals/tcs/HylandPP06.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/pacmpl/YangW21,
+  author       = {Zhixuan Yang and
+                  Nicolas Wu},
+  title        = {Reasoning about effect interaction by fusion},
+  journal      = {Proc. {ACM} Program. Lang.},
+  volume       = {5},
+  number       = {{ICFP}},
+  pages        = {1--29},
+  year         = {2021},
+  url          = {https://doi.org/10.1145/3473578},
+  doi          = {10.1145/3473578},
+  timestamp    = {Sat, 08 Jan 2022 02:21:37 +0100},
+  biburl       = {https://dblp.org/rec/journals/pacmpl/YangW21.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
