(wip) add a subsection on syntactic equality of effectful programs

--- a/writeup/jfp/tex/unicode.tex
+++ b/writeup/jfp/tex/unicode.tex
@@ -87,6 +87,7 @@
 \newunicodechar{≲}{\ensuremath{\lesssim}}
 \newunicodechar{ℓ}{\ensuremath{\ell}}
 \newunicodechar{≈}{\ensuremath{\approx}}
+\newunicodechar{≪}{\ensuremath{\ll}}
 
 %%
 %% Greek
