--- a/writeup/jfp/tex/references.bib
+++ b/writeup/jfp/tex/references.bib
@@ -3474,3 +3474,41 @@ japanese     =   {http://proofcafe.org/sf}
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
+@article{DBLP:journals/pacmpl/RestPRVM22,
+  author       = {Cas van der Rest and
+                  Casper Bach Poulsen and
+                  Arjen Rouvoet and
+                  Eelco Visser and
+                  Peter D. Mosses},
+  title        = {Intrinsically-typed definitional interpreters {\`{a}} la carte},
+  journal      = {Proc. {ACM} Program. Lang.},
+  volume       = {6},
+  number       = {{OOPSLA2}},
+  pages        = {1903--1932},
+  year         = {2022},
+  url          = {https://doi.org/10.1145/3563355},
+  doi          = {10.1145/3563355},
+  timestamp    = {Mon, 05 Dec 2022 13:35:13 +0100},
+  biburl       = {https://dblp.org/rec/journals/pacmpl/RestPRVM22.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/jfp/AllaisACMM21,
+  author       = {Guillaume Allais and
+                  Robert Atkey and
+                  James Chapman and
+                  Conor McBride and
+                  James McKinna},
+  title        = {A type- and scope-safe universe of syntaxes with binding: their semantics
+                  and proofs},
+  journal      = {J. Funct. Program.},
+  volume       = {31},
+  pages        = {e22},
+  year         = {2021},
+  url          = {https://doi.org/10.1017/S0956796820000076},
+  doi          = {10.1017/S0956796820000076},
+  timestamp    = {Mon, 28 Aug 2023 21:42:08 +0200},
+  biburl       = {https://dblp.org/rec/journals/jfp/AllaisACMM21.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
