Minor adjustments to intro

--- a/writeup/jfp/tex/references.bib
+++ b/writeup/jfp/tex/references.bib
@@ -3401,7 +3401,7 @@ japanese     =   {http://proofcafe.org/sf}
 }
 
 @misc{heftyalgebraspopl23artifact,
-  author       = "Bach Poulsen, Casper and Reinders, Jaro",
+  author       = "Bach Poulsen, Casper",
   title        = "Hefty Algebras: Modular Elaboration of Higher-Order Algebraic Effects -- Artifact",
   year         = "2023",
   note         = "\url{https://doi.org/10.5281/zenodo.7315899}",
