WIP pass over 2.6

--- a/writeup/jfp/tex/unicode.tex
+++ b/writeup/jfp/tex/unicode.tex
@@ -111,6 +111,7 @@
 \newunicodechar{Γ}{\ensuremath{\Gamma}}
 \newunicodechar{η}{\ensuremath{\eta}}
 \newunicodechar{ζ}{\ensuremath{\zeta}}
+\newunicodechar{θ}{\ensuremath{\theta}}
 
 
 %%
