(fix) add missing unicode macros

--- a/writeup/jfp/tex/unicode.tex
+++ b/writeup/jfp/tex/unicode.tex
@@ -82,12 +82,14 @@
 \newunicodechar{𝓓}{\ensuremath{\mathbf{\mathscr{D}}}}
 \newunicodechar{♯}{\ensuremath{\sharp}}
 \newunicodechar{∎}{\ensuremath{\blacksquare}}
+\newunicodechar{■}{\ensuremath{\square}}
 \newunicodechar{↣}{\ensuremath{\rightarrowtail}}
 \newunicodechar{⟶}{\ensuremath{\longrightarrow}}
 \newunicodechar{≲}{\ensuremath{\lesssim}}
 \newunicodechar{ℓ}{\ensuremath{\ell}}
 \newunicodechar{≈}{\ensuremath{\approx}}
 \newunicodechar{≪}{\ensuremath{\ll}}
+\newunicodechar{≅}{\ensuremath{\cong}}
 
 %%
 %% Greek
@@ -111,6 +113,8 @@
 \newunicodechar{Γ}{\ensuremath{\Gamma}}
 \newunicodechar{η}{\ensuremath{\eta}}
 \newunicodechar{ζ}{\ensuremath{\zeta}}
+\newunicodechar{δ}{\ensuremath{\delta}}
+\newunicodechar{θ}{\ensuremath{\theta}}
 
 
 %%
