--- a/writeup/jfp/tex/agdadimmed.sty
+++ b/writeup/jfp/tex/agdadimmed.sty
@@ -1,10 +1,10 @@
 \renewcommand{\AgdaKeywordFontStyle}[1]{\textbf{\textsf{#1}}}
 \renewcommand{\AgdaStringFontStyle}[1]{\texttt{#1}}
-\renewcommand{\AgdaCommentFontStyle}[1]{\textsf{#1}}
+\renewcommand{\AgdaCommentFontStyle}[1]{\textit{#1}}
 \renewcommand{\AgdaBoundFontStyle}[1]{\textit{#1}}
 
 % Aspect colours.
-\definecolor{AgdaComment}      {HTML}{333333}
+\definecolor{AgdaComment}      {HTML}{A9A9A9}
 \definecolor{AgdaPragma}       {HTML}{000000}
 \colorlet   {AgdaKeyword}            {black}
 \definecolor{AgdaString}       {HTML}{B22222}
