--- a/writeup/jfp/tex/unicode.tex
+++ b/writeup/jfp/tex/unicode.tex
@@ -90,6 +90,7 @@
 \newunicodechar{≈}{\ensuremath{\approx}}
 \newunicodechar{≪}{\ensuremath{\ll}}
 \newunicodechar{≅}{\ensuremath{\cong}}
+\newunicodechar{◄}{\ensuremath{\blacktriangleleft}}
 
 %%
 %% Greek
