--- a/writeup/jfp/tex/unicode.tex
+++ b/writeup/jfp/tex/unicode.tex
@@ -178,6 +178,7 @@
 \newunicodechar{𝑐}{\textit{c}}
 \newunicodechar{𝑎}{\textit{a}}
 \newunicodechar{𝑡}{\textit{t}}
+\newunicodechar{ℰ}{\ensuremath{\mathcal{E}}}
 
 \newunicodechar{𝓑}{\ensuremath{\mathnormal{\gg\!\!=}}}
 
