Pass over 3.3. Note: Universe is now Univ

--- a/writeup/jfp/tex/unicode.tex
+++ b/writeup/jfp/tex/unicode.tex
@@ -149,7 +149,7 @@
 \newunicodechar{ˡ}{$^{l}$}
 \newunicodechar{ʳ}{$^r$}
 \newunicodechar{ᴰ}{$^D$}
-\newunicodechar{ᵀ}{$^T$}
+\newunicodechar{ᵀ}{$^{\textsf{T}}$}
 \newunicodechar{ᵇ}{$^{b}$}
 \newunicodechar{ᵐ}{$_m$}
 \newunicodechar{ⁿ}{$_n$}
