(wip) example proof in S4, add overview of laws in Agda code

--- a/writeup/jfp/tex/document.tex
+++ b/writeup/jfp/tex/document.tex
@@ -32,6 +32,7 @@
 \usepackage{amssymb}
 \usepackage{stmaryrd}
 \usepackage{scalerel}
+\usepackage{multirow}
 
 \usepackage{tikz}
 \usetikzlibrary{positioning,fit,calc}
