--- a/writeup/jfp/tex/unicode.tex
+++ b/writeup/jfp/tex/unicode.tex
@@ -90,6 +90,7 @@
 \newunicodechar{ℓ}{\ensuremath{\ell}}
 \newunicodechar{≈}{\ensuremath{\approx}}
 \newunicodechar{≪}{\ensuremath{\ll}}
+\newunicodechar{≫}{\ensuremath{\gg}}
 \newunicodechar{≅}{\ensuremath{\cong}}
 \newunicodechar{◄}{\ensuremath{\blacktriangleleft}}
 
