a todo and some minor adjustments

--- a/writeup/jfp/TODO.org
+++ b/writeup/jfp/TODO.org
@@ -4,4 +4,5 @@
 
 * TODO Update list of contributions to reflect new contribution
 
-* TODO Relation to https://arxiv.org/pdf/2302.01415
+* TODO Relation to https://arxiv.org/pdf/2302.01415 in 3.5 and related work
+
