(fix) resolve todo's in S5

--- a/writeup/jfp/tex/references.bib
+++ b/writeup/jfp/tex/references.bib
@@ -52,7 +52,7 @@
   author    = {Benjamin Delaware and
                Bruno C. d. S. Oliveira and
                Tom Schrijvers},
-  editor    = {Roberto Giacobazzi and
+  editor    = {Roberto Gicobazzi and
                Radhia Cousot},
   title     = {Meta-theory {\`{a}} la carte},
   booktitle = {The 40th Annual {ACM} {SIGPLAN-SIGACT} Symposium on Principles of
@@ -164,7 +164,7 @@
 
 @InProceedings{altenkirch1999monadic,
   author    = {Thorsten Altenkirch and
-               Bernhard Reus},
+               Bernhard Re[us},
   editor    = {J{\"{o}}rg Flum and
                Mario Rodr{\'{\i}}guez{-}Artalejo},
   title     = {Monadic Presentations of Lambda Terms Using Generalized Inductive
@@ -3512,3 +3512,9 @@ japanese     =   {http://proofcafe.org/sf}
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
+@misc{artifact,
+	author = {Cas van der Rest and Casper Bach Poulsen},
+	title = {{G}it{H}ub - heft-lang/hefty-equations: {M}odular reasoning about (elaborations of) higher-order effects --- github.com},
+	howpublished = {\url{https://github.com/heft-lang/hefty-equations}},
+	year = {2024}
+}
