(fix) update artifact url

--- a/writeup/jfp/tex/references.bib
+++ b/writeup/jfp/tex/references.bib
@@ -2375,8 +2375,6 @@ japanese     =   {http://proofcafe.org/sf}
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-
-
 @inproceedings{DBLP:conf/cpp/HuC21,
   author    = {Jason Z. S. Hu and
                Jacques Carette},
@@ -3518,3 +3516,20 @@ japanese     =   {http://proofcafe.org/sf}
 	howpublished = {\url{https://github.com/heft-lang/hefty-equations}},
 	year = {2024}
 }
+
+@article{DBLP:journals/pacmpl/PoulsenR23,
+  author       = {Casper Bach Poulsen and
+                  Cas van der Rest},
+  title        = {Hefty Algebras: Modular Elaboration of Higher-Order Algebraic Effects},
+  journal      = {Proc. {ACM} Program. Lang.},
+  volume       = {7},
+  number       = {{POPL}},
+  pages        = {1801--1831},
+  year         = {2023},
+  url          = {https://doi.org/10.1145/3571255},
+  doi          = {10.1145/3571255},
+  timestamp    = {Fri, 10 Feb 2023 23:34:55 +0100},
+  biburl       = {https://dblp.org/rec/journals/pacmpl/PoulsenR23.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
