--- a/writeup/jfp/tex/references.bib
+++ b/writeup/jfp/tex/references.bib
@@ -3533,3 +3533,17 @@ japanese     =   {http://proofcafe.org/sf}
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
+@Article{DBLP:journals/corr/abs-2302-01415,
+  author       = {Birthe van den Berg and Tom Schrijvers},
+  title        = {A Framework for Higher-Order Effects {\&} Handlers},
+  journal      = {CoRR},
+  year         = 2023,
+  volume       = {abs/2302.01415},
+  doi          = {10.48550/ARXIV.2302.01415},
+  eprint       = {2302.01415},
+  eprinttype   = {arXiv},
+  url          = {https://doi.org/10.48550/arXiv.2302.01415},
+  timestamp    = {Mon, 05 Feb 2024 20:18:47 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2302-01415.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
