--- a/writeup/jfp/TODO.org
+++ b/writeup/jfp/TODO.org
@@ -1,10 +1,10 @@
-* TODO Relation to https://arxiv.org/pdf/2302.01415 in 3.5 and related work
+* TODO Relation to https://arxiv.org/pdf/2302.01415 in related work
 * TODO consistency of using period/colon preceding a code example
 * TODO check conclusion 
 * TODO add a remark about fusion paper (or, reasoning in general) in related work
 
-Done: 
-* TODO Sentence in intro explaining how the paper relates to the old one
-* TODO Update list of contributions to reflect new contribution
-* TODO Artifact URL
+* DONE Sentence in intro explaining how the paper relates to the old one
+* DONE Update list of contributions to reflect new contribution
+* DONE Artifact URL
+* DONE Relation to https://arxiv.org/pdf/2302.01415 in 3.5
 
