Fixes and WIP response

--- a/writeup/jfp/tex/references.bib
+++ b/writeup/jfp/tex/references.bib
@@ -3547,3 +3547,26 @@ japanese     =   {http://proofcafe.org/sf}
   biburl       = {https://dblp.org/rec/journals/corr/abs-2302-01415.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+
+@inproceedings{WuS15,
+  author       = {Nicolas Wu and
+                  Tom Schrijvers},
+  editor       = {Ralf Hinze and
+                  Janis Voigtl{\"{a}}nder},
+  title        = {Fusion for Free - Efficient Algebraic Effect Handlers},
+  booktitle    = {Mathematics of Program Construction - 12th International Conference,
+                  {MPC} 2015, K{\"{o}}nigswinter, Germany, June 29 - July 1, 2015.
+                  Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {9129},
+  pages        = {302--322},
+  publisher    = {Springer},
+  year         = {2015},
+  url          = {https://doi.org/10.1007/978-3-319-19797-5\_15},
+  doi          = {10.1007/978-3-319-19797-5\_15},
+  timestamp    = {Sun, 06 Oct 2024 21:12:06 +0200},
+  biburl       = {https://dblp.org/rec/conf/mpc/WuS15.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
